--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Carbonara recipe</title>
 </head>
 <body>
-    <h1>Carbonara recipe</h1>
+    <h1>Spaghetti alla Carbonara</h1>
+    <img src="carbonara.jpg" alt="a plate of carbonara" width="500" height="400">
+        <p>Carbonara is made with guanciale (cured pork), eggs, Pecorino Romano cheese, spaghetti pasta, and lots of black pepper. 
+            Italians don't add extra ingredients like cream, milk, garlic, or onions. Try this recipe if you want to make an authentic, 
+            creamy carbonara that comes straight from Italy. Buon appetito!
+        </p>
+
+        <h3>These are the simple ingredients you’ll need to make homemade spaghetti alla carbonara recipe: </h3>
+            <ul>
+                <li>Oil: This traditional Italian recipe starts with olive oil. </li>
+                <li>Guanciale: Buy guanciale (or cured pork cheek) at your local butcher. 
+                    If you can’t find it, you can substitute unsmoked bacon or pancetta.</li>
+                <li>Spaghetti: Use store-bought or homemade spaghetti noodles. 
+                    If you like, you can substitute bucatini for the spaghetti. </li>
+                <li>Eggs: Three large eggs add richness and flavor. </li>
+                <li>Cheese: Opt for hand-shredded Pecorino Romano cheese. You can substitute Parmesan, if preferred.</li>
+                <li>Seasonings: This flavorful spaghetti alla carbonara is simply seasoned with salt and pepper. </li>
+            </ul>  
+
+        <h3>Steps:</h3>
+            <ol>
+                <li>Cook the pork in olive oil until browned and crispy, then drain on paper towels.</li>
+                <li>Boil the spaghetti in salted water. Drain and return to the pot. Let cool.</li>
+                <li>Whisk the eggs, 1/2 of the cheese, and some pepper in a bowl until smooth.</li>
+                <li>Pour the egg mixture over the pasta, stirring quickly, until creamy.</li>
+                <li>Stir in the pork, then top with the remaining cheese and more black pepper.</li>
+            </ol>
+
+    
 </body>
 </html>
