--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/carbonara.html">Carbonara Recipe</a>
+    <img src="./recipes/carbonara.jpg" alt="a plate of carbonara" width="100" height="75">
+    <hr>
+    <a href="recipes/pizza.html">Pizza Dough Recipe</a> 
+    <img src="./recipes/pizza.jpg" alt="a plate of awesome made pizza" width="100" height="75">   
+    <hr>
+    <a href="recipes/tiramisu.html">Tiramisu Recipe</a> 
+    <img src="./recipes/tiramisu.jpg" alt="a Tiramisu" width="100" height="75"> 
 </body>
 </html>
