update home page with css

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/carbonara.html">Carbonara Recipe</a>
-    <img src="./recipes/carbonara.jpg" alt="a plate of carbonara" width="100" height="75">
+    <a href="recipes/carbonara.html" class="index-text">Carbonara Recipe</a>
+    <img src="./recipes/carbonara.jpg" alt="a plate of carbonara" class="index-pics">
     <hr>
-    <a href="recipes/pizza.html">Pizza Dough Recipe</a> 
-    <img src="./recipes/pizza.jpg" alt="a plate of awesome made pizza" width="100" height="75">   
+    <a href="recipes/pizza.html" class="index-text">Pizza Dough Recipe</a> 
+    <img src="./recipes/pizza.jpg" alt="a plate of awesome made pizza" class="index-pics">   
     <hr>
-    <a href="recipes/tiramisu.html">Tiramisu Recipe</a> 
-    <img src="./recipes/tiramisu.jpg" alt="a Tiramisu" width="100" height="75"> 
+    <a href="recipes/tiramisu.html" class="index-text">Tiramisu Recipe</a> 
+    <img src="./recipes/tiramisu.jpg" alt="a Tiramisu" class="index-pics">     
 </body>
 </html>
