add small changes to index

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <div>
-    <span>
-    <a href="recipes/carbonara.html" class="index-text">Carbonara Recipe</a>
-    <img src="./recipes/carbonara.jpg" alt="a plate of carbonara" class="index-pics">
-    </span>
-    <span>
-    <a href="recipes/pizza.html" class="index-text">Pizza Dough Recipe</a> 
-    <img src="./recipes/pizza.jpg" alt="a plate of awesome made pizza" class="index-pics">   
-    </span>
-    <span>
-    <a href="recipes/tiramisu.html" class="index-text">Tiramisu Recipe</a> 
-    <img src="./recipes/tiramisu.jpg" alt="a Tiramisu" class="index-pics">
-    </span>
+    <div class="row-container">
+        <div class="recipe-container">
+            <a href="recipes/carbonara.html" class="index-text">Carbonara Recipe</a>
+            <img src="./recipes/carbonara.jpg" alt="a plate of carbonara" class="index-pics">
+        </div>
+        <div class="recipe-container">
+            <a href="recipes/pizza.html" class="index-text">Pizza Dough Recipe</a> 
+            <img src="./recipes/pizza.jpg" alt="a plate of awesome made pizza" class="index-pics">   
+        </div>
+        <div class="recipe-container">
+            <a href="recipes/tiramisu.html" class="index-text">Tiramisu Recipe</a> 
+            <img src="./recipes/tiramisu.jpg" alt="a Tiramisu" class="index-pics">
+        </div>
     </div>     
 </body>
 </html>
